tests/Rule/data/DeadMethodRule/removing/no-namespace.php
<?php declare(strict_types = 1);

interface Remove
{
    public function dead(): void // error: Unused Remove::dead
    ;
}
